<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_title"
        android:textSize="26sp"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_below="@id/titleText">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonStreamer"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/white"
                android:text="@string/label_spotify" />

            <Button
                android:id="@+id/buttonScores"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/white"
                android:text="@string/label_scores" />

            <Button
                android:id="@+id/buttonLibrary"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/white"
                android:text="@string/label_library" />

            <Button
                android:id="@+id/buttonBuildIt"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/white"
                android:text="@string/label_build_it" />

            <Button
                android:id="@+id/buttonXYZ"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/white"
                android:text="@string/label_xyz"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonCapstone"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/red"
                android:text="@string/label_capstone"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
